# Server

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  Dockerfile  LEGGIMI.txt  License2.txt  Makefile  Makefile.am  Makefile.source  README.md  REPORT  REPORT.txt  Vagrantfile  act.comm.c  area.h  astyle  astylerc  auction.c  auction.h  bitarray.h  breath.h  bsd.c  build.h  build.sh  carceri.h  charlist.h  cmdid.h  comm.c  comm.h  commit  compilazione  config.status  configure  configure.ac  constants.c  create.mob.c  db.c  (+74 more)
.github/actions/: compile.yml
.github/actions/compile/: action.yml
.github/actions/dockerize/: action.yml
.github/workflows/: build-devel.yml  build-myst.yml  build.yml  build_old.yml  cmake-single-platform.yml  dockerize-devel.yml  dockerize-production.yml  dockerize-staging.yml  dockerize.yml
Confs/: ci-nebbie-it.conf  devel.conf  vagrant.conf
cmake/Modules/: FindMySQLConnectorCPP.cmake
contrib/slacking/: json.hpp  slacking.hpp
docs/: audit-wizardmorgan-e-creazione-pg.md  cutover-db-checklist.md  docker-3-services-checklist.md  export-legacy-import-csv.py  legacy-import-montero.csv  legacy-loader.md  resistance-bit-to-value.md  schema-s1-ddl-add-resistance.sql  schema-s1-ddl-draft.sql  schema-s1-ddl-drop-extra-str.sql  schema-s1-ddl-drop-unused-conditions.sql  schema-s1-ddl-fix-character-classes.sql  schema-s1-death-snapshot.sql  schema-s1-inventory-scrap-cause.sql  schema-s1-inventory-soft-delete.sql  schema-s1-mapping.md  schema-s1-toon-migration-flags.sql  schema-s1-vs-mysql.md  schema-toon-nuke-blacklist.sql
executors/: Dockerfile  install-odb-toolchain.sh
modified/: constants_ORIG.c  db.c_autodelete  db_old.c  limits.c  speciali.c  speciali__.c
montero_dockers/: Dockerfile  docker-build.sh  docker-compose.yml  docker-entrypoint.sh  docker-run.sh  docker_migrate_mysql57_to_8.sh
mudcompiler/: Dockerfile  install-odb-toolchain.sh
mudroot/: .gitignore  README.md  mystd  nebbie  startmyst
mudroot/lib/: .gitignore  asshole.list  helptbl  myst.act  myst.dam  myst.gui  myst.mob  myst.pos  myst.shp  myst.spe  myst.wld  myst.zon  regdb_d.db  regdb_i.db
mudroot/lib/scripts/: Banker  Dog  Drunk  Mime  RobMin  Seneca  ZepGuy
mudrunner/: Dockerfile
pages/: credits  help  helptbl  info  login  motd  news  wizhelp  wizhelptbl  wizmotd  wiznews
scripts/: apply-schema-s1.sh  check-gate-7.7.sh  docker-import-nebbie.sh  expand-procarea-reward-names.py  gate-sql.sh  generate-procarea-mobs.py  generate-procarea-themes-ext.py  procarea_mob_catalog.py  procarea_mob_catalog_ext.py  procarea_room_desc.py  procarea_theme_tags.py  restore-pg-drill.sh  set-account-password.sh  shorten-procarea-reward-descriptions.py  simulate-procarea-boss-classes.py  simulate-procarea-drops.py  test-gate-7.5.md  test-gate-7.6.md  test-gate-7.8.md  test-gate-7.9.md  vagrant-provision-noble.sh
shutils/: .gitignore  autoenums.wiki  autoenums_cpp.tmpl  autoenums_hpp.tmpl  autoenums_lua.tmpl  autoenums_wiki.tmpl  code_generator.php  codegen.sh  cpp2php.php  enums.json  generate-enum-sync.php
shutils/githooks/: pre-push
shutils/phplib/: ansicolor.php  curl.inc.php  getopt.php
shutils/phplib/alarphptemplate-1.0/: alarphptemplate.inc.php  test.php  test.tmpl
src/: .gitignore  CMakeLists.txt  Heap.cpp  Makefile  Makefile.am  Registered.cpp  Registered.hpp  Sql.cpp  Sql.hpp  SqlMysql.cpp  SqlMysql.hpp  _fight.c  a.php  act.comm.cpp  act.comm.hpp  act.info.c  act.info.cpp  act.info.hpp  act.move.c  act.move.cpp  act.move.hpp  act.obj.cpp  act.obj.hpp  act.obj1.c  act.obj1.cpp  act.obj1.hpp  act.obj2.c  act.obj2.cpp  act.obj2.hpp  act.obj_common.cpp  act.obj_common.hpp  act.obj_get.cpp  act.obj_get.hpp  act.obj_wear.cpp  act.obj_wear.hpp  act.obj_wear_infer.cpp  act.obj_wear_infer.hpp  act.off.c  act.off.cpp  act.off.hpp  (+284 more)
src/attic/: Heap.cpp  OSql.cpp  OSql.hpp  SqlMysql.cpp  SqlMysql.hpp  bitarray.hpp  bsd.cpp  carceri.cpp  carceri.hpp  locks.cpp  locks.hpp  mem_test.cpp  mem_test.hpp
src/myst_pch/: .gitignore  compile_flags.rsp
src/odb/: .gitignore  account-mysql.xml  account-odb-mysql.cxx  account-odb-mysql.hxx  account-odb-mysql.ixx  account-odb.cxx  account-odb.hxx  account-odb.ixx  account-schema-mysql.cxx  account.hpp  myst-mysql.xml  myst-schema-mysql.cxx  odb.hpp  pg.hpp  world.hpp
utilities/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  checkfile.c  convert.cpp  converti.c  courtesy_port  courtesy_port.c  courtesy_port.env.example  courtesy_port.service  db2csv.php  dbmfunc.c  doreg2.c  enums  enums.cpp  mkrel.c  mkver.c  sblock  sblock.cpp  sizes.cpp
